test input gallery

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:eJZgAanWrZf06GW8aAKKfnvL5lJfytDHsS6Qiofnc+8=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=https://campusdigital.id
 
 LOG_CHANNEL=stack
@@ -10,8 +10,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=db_campusdigital
-DB_USERNAME=campusdigital
-DB_PASSWORD="bismillah*2020#"
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
