--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3.0",
+        "php": ">= 7.3",
         "campusdigital/campuscms": "^1.3",
         "fakerphp/faker": "^1.17",
         "fideloper/proxy": "^4.2",
